force-app/main/default/objects/Account/fields/Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Days__c</fullName>
    <label>Lead Time Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>