force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net_15</fullName>
                <label>Net 15</label>
            </value>
            <value>
                <fullName>Net_30</fullName>
                <label>Net 30</label>
            </value>
            <value>
                <fullName>Net_45</fullName>
                <label>Net 45</label>
            </value>
            <value>
                <fullName>COD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>