force-app/main/default/objects/Account/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Contact for Vendors</relationshipLabel>
    <relationshipName>Primary_Contact_for_Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>