force-app/main/default/objects/Account/fields/Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Quality_Rating__c</fullName>
    <formula>5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>