force-app/main/default/objects/Account/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coffee_Supplier</fullName>
                <label>Coffee Supplier</label>
            </value>
            <value>
                <fullName>Pastry_Supplier</fullName>
                <label>Pastry Supplier</label>
            </value>
            <value>
                <fullName>Dairy_Supplier</fullName>
                <label>Dairy Supplier</label>
            </value>
            <value>
                <fullName>Packaging_Supplier</fullName>
                <label>Packaging Supplier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>