force-app/main/default/objects/Account/recordTypes/Vendor.recordType-meta.xml
<RecordType>
    <fullName>Vendor</fullName>
    <active>true</active>
    <label>Vendor</label>
    <description>Record type for vendor accounts in the coffee shop inventory system</description>
</RecordType>